# ChangeLog for dev-python/should_dsl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*should_dsl-1.1.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.1.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.ebuild:
  Keyworded ~x86.

*should_dsl-1.1 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me. Required by dev-python/pyhistorian.
