@@ -1,17 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST should_dsl-1.1-README.rst 1761 RMD160 cc09180551cc6b0391a714c30dcb2007b242c4b2 SHA1 bb6efe5da21a23d56799a33564dd8b1e2fb4e013 SHA256 c4c15795f7af73f14646940d9a4e56730afb74874fb4d21ae069a12c9117522b
 DIST should_dsl-1.1.1.tar.gz 4777 RMD160 908ba50bb90a4520d97dab41a85334861261879e SHA1 b3a36a1341141d5127be039382aa2db431b482a3 SHA256 5861f6de0049bb09ad2fdba16cf7a3ff7df019c113332614801b1ee5230c06fa
-DIST should_dsl-1.1.tar.gz 3628 RMD160 64a67c4ddac874070da87f639cd8bcf08d77f917 SHA1 3efe7bbab8ff9fdc8c81b4153c27fdcee9f9e90f SHA256 731ea87504cea4d1e49dc980d0cde06e4b959f5e67ac4aceebcba77deb043d3c
 EBUILD should_dsl-1.1.1.ebuild 447 RMD160 8ceab6dbf185c0293cf9219b1850f531c575e259 SHA1 390e1d3a7b70c4393d7c3a722dc6fc8926147aa7 SHA256 f0a9f67b23b28f1458fa1395c2846e3622e48feac561268e223e87034256e8a5
-EBUILD should_dsl-1.1.ebuild 631 RMD160 ddc316aa910f54eb4cb20c9072d40683e2d175b4 SHA1 b71403cfdb722c1fce36e0cfa7dd5eb974a2622a SHA256 c80d4bcde789f9b33926c1c01599c93c917e2247313f48bece817320d62c60b2
-MISC ChangeLog 508 RMD160 6a3f75688ec4454a5efd3bd5830b1b83d736c85b SHA1 507c72657c103f12b43c8c6297cb6e8254fd053d SHA256 020905dc6a33b00cfbb4cd50ac422d2837dd1adbb4d1cdc0a6597d398c1df994
+MISC ChangeLog 606 RMD160 e83edc388cafb648dd350488e7c6c47d3f56ece3 SHA1 df91cfe9614866211572de3d7026b82ba45ecd4a SHA256 f3bac9d4525b5c2ba629f0303e828db415f2434630935c794dd2a6ff75f83e0f
 MISC metadata.xml 404 RMD160 ca2e5323da3f9ffbf94d75ad2bbe6ac78aa415e9 SHA1 5173cdd6f6f0a46f0513fc6767969a297714ad72 SHA256 6eb0a59af9631fd0ba1e50f7a6b7bec9e17dd7d1483d5ab560f1ab07036c3f51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrLFvEACgkQzJrj3cAXR0k+gACeK2nkKbGfh7tgGkgUATxTGPX8
-VUQAmwVDdMHRC5Lpw5ocKSpaNKNG45kV
-=cmv8
+iEYEARECAAYFAkrLMWIACgkQzJrj3cAXR0mpCwCeLGpIm+6c9j5NmPl6v1FmxfVv
+pFwAniIKLNiRXbb10vy6hp7hS4iQKrcA
+=hVyB
 -----END PGP SIGNATURE-----
