@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Oct 2009; James Rowe <jnrowe@gmail.com> -should_dsl-1.1.ebuild:
+  Removing obsolete ebuild.
+
 *should_dsl-1.1.1 (06 Oct 2009)
 
   06 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.1.1.ebuild:
